# libsquid_wcs

./: CMakeLists.txt  INSTALL  Makefile  README.md  libsquid_wcs.c  libsquid_wcs.h  libwcsxy.c
cmake/Modules/: FindCFITSIO.cmake  FindLIBSQUID.cmake  FindWCSLIB.cmake
cmake_modules/: COPYING-CMAKE-SCRIPTS  FindLIBSQUID.cmake  FindWCSLIB.cmake
